# server-status-bot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py
.github/workflows/: ci.yaml
app/: settings.py  utils.py
app/bot/: app_registry.py  controller.py  handlers.py  middleware.py  routers.py  widgets.py
app/system/: __init__.py  config.yaml  handlers.py
app/system/metrics/: __init__.py  hardware.py  network.py  utils.py
data/bot/configs/: header.yaml.j2  nav.yaml.j2  widgets.yaml.j2
data/bot/strings/: common.yaml  en.yaml  ru.yaml
lib/aiogram_keyboard/: helpers.py  models.py
lib/aiogram_keyboard/components/: header.py  widget.py
lib/aiogram_keyboard/keyboards/: base.py  inline.py
tests/: test_utils.py
tests/bot/: test_app_registry.py  test_handlers.py  test_middleware.py  test_widgets.py
tests/system/: test_network.py
